src/objects/ModuleResponse__c.object
<CustomObject>
    <fields>
        <fullName>CorrectQuestions__c</fullName>
        <label>Correct Questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CourseStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Status</label>
        <referenceTo>CourseStatus__c</referenceTo>
        <relationshipLabel>Modules Responses</relationshipLabel>
        <relationshipName>ModuleResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GradePercent__c</fullName>
        <label>Grade %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GradeValue__c</fullName>
        <label>Grade Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncorrectQuestions__c</fullName>
        <label>Incorrect Questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastChance__c</fullName>
        <formula>NumberOfAttempt__c = Module__r.AttemptsAllowed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Chance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Modules Responses</relationshipLabel>
        <relationshipName>ModuleResponses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Module</label>
        <referenceTo>Module__c</referenceTo>
        <relationshipLabel>Module Responses</relationshipLabel>
        <relationshipName>ModuleResponses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumberOfAttempt__c</fullName>
        <label>Number of Attempt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofApprove__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Approve</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubmitDate__c</fullName>
        <label>Submit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TotalQuestions__c</fullName>
        <label>Total Questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Module Response</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Module Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Modules Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CourseStatusCannotBeModified</fullName>
        <active>true</active>
        <description>Lookup to Course Status can&apos;t be modified.</description>
        <errorConditionFormula>ISCHANGED( CourseStatus__c )</errorConditionFormula>
        <errorDisplayField>CourseStatus__c</errorDisplayField>
        <errorMessage>Course Status can&apos;t be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CourseStatusRequired</fullName>
        <active>false</active>
        <description>The lookup to Course Status must be required.</description>
        <errorConditionFormula>ISBLANK( CourseStatus__c )</errorConditionFormula>
        <errorDisplayField>CourseStatus__c</errorDisplayField>
        <errorMessage>Course Status is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MemberCannotChange</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Member__c )</errorConditionFormula>
        <errorMessage>The member cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ModuleCannotChange</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Module__c )</errorConditionFormula>
        <errorMessage>The module cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RelatedCourseActive</fullName>
        <active>true</active>
        <errorConditionFormula>!ISPICKVAL(CourseStatus__r.Course__r.Status__c,&apos;Active&apos;)
&amp;&amp; (ISNEW() ||  
AND( IsSubmitted__c &amp;&amp; !PRIORVALUE(IsSubmitted__c))
)</errorConditionFormula>
        <errorMessage>The related course must be active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateActiveModule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(Module__r.IsActive__c)</errorConditionFormula>
        <errorMessage>The related module must be active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateAttemptNumber</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(NumberOfAttempt__c)),NumberOfAttempt__c &gt;  Module__r.AttemptsAllowed__c)</errorConditionFormula>
        <errorMessage>You have reached the limit of attempts for this module.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateDate</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(NOT(ISBLANK(Module__r.Course__r.StartDate__c)), Date__c &lt; Module__r.Course__r.StartDate__c),AND(NOT(ISBLANK(Module__r.Course__r.EndDate__c)), Date__c &gt; Module__r.Course__r.EndDate__c))</errorConditionFormula>
        <errorMessage>The course is not available in this period.</errorMessage>
    </validationRules>
</CustomObject>